# httpx-folio

./: .gitignore  CHANGELOG.md  README.md  environment.yaml  precious.toml  pylock.maximal.toml  pylock.minimal.toml  pylock.toml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
src/httpx_folio/: factories.py  query.py
tests/: test_query.py  test_refreshtokenauth.py
tests/test_query/: test_id_paging.py  test_integration.py  test_normalized.py  test_offset_paging.py  test_stats.py
