[project]
name = "httpx-folio"
version = "0.1.0"
description = "FOLIO related niceties for the next generation HTTP client for Python"
authors = [
    {name = "Katherine Bargar", email = "kbargar@fivecolleges.edu"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
