[project]
name = "httpx-folio"
version = "0.1.0"
description = "FOLIO related niceties for the next generation HTTP client for Python"
authors = [
    {name = "Katherine Bargar", email = "kbargar@fivecolleges.edu"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://github.com/Five-Colleges-Incorporated/httpx-folio"
"Bug Tracker"= "https://github.com/Five-Colleges-Incorporated/httpx-folio/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
package-dir = "src"

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
target-version = "py39"
[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["FBT", "D105", "FIX002", "TD002", "TD003", "COM812"]
pydocstyle.convention = "google"
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S", "INP001", "N813", "PLC0415", "PLR2004"]
[tool.ruff.lint.flake8-annotations]
mypy-init-return = true


[dependency-groups]
lint = [
    "ruff==0.12.10",
    "mypy==1.17.1",
    "pre-commit-hooks==6.0.0",
]
